--- a/VirtualCardBoard/app/src/main/AndroidManifest.xml
+++ b/VirtualCardBoard/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.degree.bachelor.jane_doe.virtualcardboard">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
