--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,15 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+DesignTimeResolveAssemblyReferencesInput.cache
+TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+VirtualCardBoardClient.csproj.FileListAbsolute.txt
+VirtualCardBoardClient.csproj.GenerateResource.Cache
+VirtualCardBoardClient.csprojResolveAssemblyReference.cache
+VirtualCardBoardClient.exe
+VirtualCardBoardClient.pdb
+VirtualCardBoardClient.Properties.Resources.resources
+TempPE
+DesignTimeResolveAssemblyReferences.cache
