--- a/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
+++ b/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
@@ -52,6 +52,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="ServerThread.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
