--- a/VirtualCardBoard/app/src/main/AndroidManifest.xml
+++ b/VirtualCardBoard/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.degree.bachelor.jane_doe.virtualcardboard">
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-feature android:name="android.hardware.camera" />
     <application
         android:allowBackup="true"
