--- a/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
+++ b/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Listener.cs" />
+    <Compile Include="ViewSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewSettings.Designer.cs">
+      <DependentUpon>ViewSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="VirtualCardBoardInterface.cs" />
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
@@ -71,6 +77,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ViewSettings.resx">
+      <DependentUpon>ViewSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
