--- a/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
+++ b/WindowsClient/VirtualCardBoardClient/VirtualCardBoardClient.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ViewSettings.resx">
       <DependentUpon>ViewSettings.cs</DependentUpon>
